--- a/SchoolProject.Data/SchoolProject.Data.csproj
+++ b/SchoolProject.Data/SchoolProject.Data.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.7" />
   </ItemGroup>
 
 </Project>
