Added the SignIn , added the JWT Authentication and added SwaggerGen

--- a/SchoolProject.Api/appsettings.json
+++ b/SchoolProject.Api/appsettings.json
@@ -8,5 +8,16 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefultConnection": "Data Source=DESKTOP-VFMQK4F\\SQLEXPRESS;Initial Catalog=SchoolDB;Integrated Security=True;trustservercertificate=True;"
+  },
+  "jwtSettings": {
+    "secret": "SchoolProjectCleanArchitectureKey",
+    "issuer": "SchoolProject",
+    "audience": "WebSite",
+    "validateAudience": true,
+    "validateIssuer": true,
+    "validateLifetime": true,
+    "validateIssuerSigningKey": true,
+    "AccessTokenExpireDate": 1,
+    "RefreshTokenExpireDate": 20
   }
 }
