--- a/SchoolProject.Servies/SchoolProject.Servies.csproj
+++ b/SchoolProject.Servies/SchoolProject.Servies.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
   </ItemGroup>
 
   <ItemGroup>
