Added the SendEmail Endpoint

--- a/SchoolProject.Api/appsettings.json
+++ b/SchoolProject.Api/appsettings.json
@@ -19,5 +19,12 @@
     "validateIssuerSigningKey": true,
     "AccessTokenExpireDate": 1,
     "RefreshTokenExpireDate": 20
+  },
+  "emailSettings": {
+    "port": "465",
+    "host": "smtp.gmail.com",
+    "FromEmail": "3delmohamed23@gmail.com",
+    "password": "dvmztlhnvdugumwg"
+    
   }
 }
