--- a/SchoolProject.Servies/SchoolProject.Servies.csproj
+++ b/SchoolProject.Servies/SchoolProject.Servies.csproj
@@ -8,8 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="4.8.0" />
-    <PackageReference Include="MediatR" Version="12.4.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
