--- a/SchoolProject.Infrastructure/SchoolProject.Infrastructure.csproj
+++ b/SchoolProject.Infrastructure/SchoolProject.Infrastructure.csproj
@@ -22,6 +22,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="StoredProcedureEFCore" Version="1.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.8.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.8.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.8.1" />
