Add AddInstructor Endpoint with handle image

--- a/SchoolProject.Api/SchoolProject.Api.csproj
+++ b/SchoolProject.Api/SchoolProject.Api.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\SchoolProject.Servies\SchoolProject.Servies.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
