Add SystemLogs by serilog in Database

--- a/SchoolProject.Api/appsettings.json
+++ b/SchoolProject.Api/appsettings.json
@@ -25,6 +25,27 @@
     "host": "smtp.gmail.com",
     "FromEmail": "3delmohamed23@gmail.com",
     "password": "dvmztlhnvdugumwg"
-    
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.MSSqlServer", "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Error"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source=DESKTOP-VFMQK4F\\SQLEXPRESS;Initial Catalog=SchoolDB;Integrated Security=True;TrustServerCertificate=True;",
+          "tableName": "SystemLogs",
+          "autoCreateSqlTable": true
+        }
+      }
+    ]
   }
 }
